Add site url to reference assets properly

--- a/_config.yml
+++ b/_config.yml
@@ -3,5 +3,7 @@ title: Jekyll Up
 # https://github.com/jekyll/jekyll/issues/7478#issuecomment-454419470
 theme: null
 
+url: https://advaitchaitanya.github.io/jekyll-up
+
 sass:
   style: compressed
